                    Changes made to Pyjamas since 0.5p1
                    -----------------------------------

 * Whitespace cleanup of addons by stefan schwarzer

 * Extended time module with gmtime/localtime/mktime and partial strftime

 * Tuples no more behave like List. No mutating methods anymore to go
   inline with the pyhton implementation.

 * huge refactoring, with incompatible changes,  see TODO

 * the translator and the linker are now split

 * python packages are now supported

 * translation (not linking) is done on a per-file basis like in
   python, no requirement for existing imports anymore

 * overrides are searched for in a namespace package e.g
   (__mozilla__), this means we can place overrides anywhere in the
   pyjs.path

 * platforms can inherit from others e.g. spidermonkey inherits from
   mozilla (multioverride - no need for runner specific special
   translation like the PyJS hack)

 * public folders are looked up in any directory where a module lives
   - this means the data_directory option is gone

 * pyjs/builtin/public now holds required bootstrap script files

 * there is a dev directory where all scripts from pyjs are now
   generated via normal setup.py and buildout

 * in the dev directory a test script tests the translator, browser-
   and spidermonkey-linker, the spidermonkey linker test actually runs
   examples/libtest

 * builtins now live in pyjs/builtin, those builtins (e.g. pyjslib)
   are transparent from python

 * Patch from Stefan Schwarzer to replace != None with is not None
   and == None with is None, general clean-up.

 * Got SVG 2D Canvas addonsgallery example working under Pyjamas-Desktop
   (Gecko Engine).  Requires a patch to XulRunner, for drawImage to work:
   https://bugzilla.mozilla.org/show_bug.cgi?id=502234

 * Added libtest corrections thanks to stefan schwarzer

 * Added PureMVC example EmployeeAdmin

 * Added Gecko/XUL/Hulahop as Pyjamas-Desktop engine; added pyjd.setup